--- a/Pest_Classifier_CNN.ipynb
+++ b/Pest_Classifier_CNN.ipynb
@@ -6,7 +6,7 @@
       "name": "Pest_Classifier_CNN.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyP9001wZGXJ8DQAqmeNgrQm",
+      "authorship_tag": "ABX9TyPwFMegUe9yErM8Ipdp7BBV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -730,7 +730,11 @@
       "metadata": {
         "id": "wpOZ9vyzshQZ",
         "colab_type": "code",
-        "colab": {}
+        "outputId": "bf2ddae6-fc4b-41b7-c5a6-ccc72bced208",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
       },
       "source": [
         "from os import listdir\n",
@@ -744,8 +748,16 @@
         "from mrcnn.model import MaskRCNN\n",
         "from matplotlib import pyplot\n"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Using TensorFlow backend.\n"
+          ],
+          "name": "stderr"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -845,7 +857,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 50
         },
-        "outputId": "649e5534-5c63-4164-a1d8-b41e4cf7af13"
+        "outputId": "441bfc9a-aa3c-478f-9830-2ce9c3f8319d"
       },
       "source": [
         "# train set\n",
@@ -860,7 +872,7 @@
         "test_set.prepare()\n",
         "print('Test: %d' % len(test_set.image_ids))"
       ],
-      "execution_count": 22,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -1256,7 +1268,7 @@
       "metadata": {
         "id": "3QLfYEzDGavZ",
         "colab_type": "code",
-        "outputId": "fe5bb69f-d9cb-4861-fb75-6cc10f8faea6",
+        "outputId": "6b82f27e-a877-4958-82d4-11d81389384e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 877
@@ -1276,7 +1288,7 @@
         "config = PestsConfig()\n",
         "config.display()\n"
       ],
-      "execution_count": 15,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -1341,10 +1353,10 @@
       "metadata": {
         "id": "HeAb_b3uHQs0",
         "colab_type": "code",
-        "outputId": "782ebf07-d728-4f83-b259-a5288dc2808d",
+        "outputId": "c231d953-2a2a-4805-9160-868a34a296b3",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 195
+          "height": 927
         }
       },
       "source": [
@@ -1355,18 +1367,90 @@
         "# train weights (output layers or 'heads')\n",
         "model.train(train_set, test_set, learning_rate=config.LEARNING_RATE, epochs=5, layers='heads')"
       ],
-      "execution_count": 20,
+      "execution_count": 0,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-20-7f79d019be29>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload_weights\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'mask_rcnn_coco.h5'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mby_name\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mexclude\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"mrcnn_class_logits\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"mrcnn_bbox_fc\"\u001b[0m\u001b[0;34m,\u001b[0m  \u001b[0;34m\"mrcnn_bbox\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"mrcnn_mask\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m# train weights (output layers or 'heads')\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtrain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_set\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest_set\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlearning_rate\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mconfig\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mLEARNING_RATE\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mepochs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlayers\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'heads'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m: name 'test_set' is not defined"
-          ]
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "Starting at epoch 0. LR=0.001\n",
+            "\n",
+            "Checkpoint Path: ./pests_cfg20200609T1154/mask_rcnn_pests_cfg_{epoch:04d}.h5\n",
+            "Selecting layers to train\n",
+            "fpn_c5p5               (Conv2D)\n",
+            "fpn_c4p4               (Conv2D)\n",
+            "fpn_c3p3               (Conv2D)\n",
+            "fpn_c2p2               (Conv2D)\n",
+            "fpn_p5                 (Conv2D)\n",
+            "fpn_p2                 (Conv2D)\n",
+            "fpn_p3                 (Conv2D)\n",
+            "fpn_p4                 (Conv2D)\n",
+            "In model:  rpn_model\n",
+            "    rpn_conv_shared        (Conv2D)\n",
+            "    rpn_class_raw          (Conv2D)\n",
+            "    rpn_bbox_pred          (Conv2D)\n",
+            "mrcnn_mask_conv1       (TimeDistributed)\n",
+            "mrcnn_mask_bn1         (TimeDistributed)\n",
+            "mrcnn_mask_conv2       (TimeDistributed)\n",
+            "mrcnn_mask_bn2         (TimeDistributed)\n",
+            "mrcnn_class_conv1      (TimeDistributed)\n",
+            "mrcnn_class_bn1        (TimeDistributed)\n",
+            "mrcnn_mask_conv3       (TimeDistributed)\n",
+            "mrcnn_mask_bn3         (TimeDistributed)\n",
+            "mrcnn_class_conv2      (TimeDistributed)\n",
+            "mrcnn_class_bn2        (TimeDistributed)\n",
+            "mrcnn_mask_conv4       (TimeDistributed)\n",
+            "mrcnn_mask_bn4         (TimeDistributed)\n",
+            "mrcnn_bbox_fc          (TimeDistributed)\n",
+            "mrcnn_mask_deconv      (TimeDistributed)\n",
+            "mrcnn_class_logits     (TimeDistributed)\n",
+            "mrcnn_mask             (TimeDistributed)\n",
+            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/keras/optimizers.py:790: The name tf.train.Optimizer is deprecated. Please use tf.compat.v1.train.Optimizer instead.\n",
+            "\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/tensorflow_core/python/framework/indexed_slices.py:424: UserWarning: Converting sparse IndexedSlices to a dense Tensor of unknown shape. This may consume a large amount of memory.\n",
+            "  \"Converting sparse IndexedSlices to a dense Tensor of unknown shape. \"\n",
+            "/usr/local/lib/python3.6/dist-packages/tensorflow_core/python/framework/indexed_slices.py:424: UserWarning: Converting sparse IndexedSlices to a dense Tensor of unknown shape. This may consume a large amount of memory.\n",
+            "  \"Converting sparse IndexedSlices to a dense Tensor of unknown shape. \"\n",
+            "/usr/local/lib/python3.6/dist-packages/tensorflow_core/python/framework/indexed_slices.py:424: UserWarning: Converting sparse IndexedSlices to a dense Tensor of unknown shape. This may consume a large amount of memory.\n",
+            "  \"Converting sparse IndexedSlices to a dense Tensor of unknown shape. \"\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:986: The name tf.assign_add is deprecated. Please use tf.compat.v1.assign_add instead.\n",
+            "\n",
+            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:973: The name tf.assign is deprecated. Please use tf.compat.v1.assign instead.\n",
+            "\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/keras/engine/training_generator.py:47: UserWarning: Using a generator with `use_multiprocessing=True` and multiple workers may duplicate your data. Please consider using the`keras.utils.Sequence class.\n",
+            "  UserWarning('Using a generator with `use_multiprocessing=True`'\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/keras/callbacks.py:850: The name tf.summary.merge_all is deprecated. Please use tf.compat.v1.summary.merge_all instead.\n",
+            "\n",
+            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/keras/callbacks.py:853: The name tf.summary.FileWriter is deprecated. Please use tf.compat.v1.summary.FileWriter instead.\n",
+            "\n",
+            "Epoch 1/5\n",
+            "  2/131 [..............................] - ETA: 8:20:02 - loss: 4.2586 - rpn_class_loss: 0.0567 - rpn_bbox_loss: 0.9328 - mrcnn_class_loss: 0.5934 - mrcnn_bbox_loss: 1.8243 - mrcnn_mask_loss: 0.8513 "
+          ],
+          "name": "stdout"
         }
       ]
     },
@@ -1404,6 +1488,32 @@
           "output_type": "stream",
           "text": [
             "1.15.0\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vM2Wwq29yRE8",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "0e78bd0e-ce4d-45b0-c01c-b27307364354"
+      },
+      "source": [
+        "import keras\n",
+        "print(keras.__version__)"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "2.2.4\n"
           ],
           "name": "stdout"
         }
@@ -1518,6 +1628,88 @@
           "metadata": {
             "tags": []
           }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "OPdN14d52-7E",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 323
+        },
+        "outputId": "b97817ff-8c73-4c04-e6ec-630a1ec4a4bb"
+      },
+      "source": [
+        "pip install keras==2.2.4"
+      ],
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Collecting keras==2.2.4\n",
+            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/5e/10/aa32dad071ce52b5502266b5c659451cfd6ffcbf14e6c8c4f16c0ff5aaab/Keras-2.2.4-py2.py3-none-any.whl (312kB)\n",
+            "\r\u001b[K     |█                               | 10kB 16.6MB/s eta 0:00:01\r\u001b[K     |██                              | 20kB 3.1MB/s eta 0:00:01\r\u001b[K     |███▏                            | 30kB 4.1MB/s eta 0:00:01\r\u001b[K     |████▏                           | 40kB 4.4MB/s eta 0:00:01\r\u001b[K     |█████▎                          | 51kB 3.5MB/s eta 0:00:01\r\u001b[K     |██████▎                         | 61kB 4.0MB/s eta 0:00:01\r\u001b[K     |███████▍                        | 71kB 4.2MB/s eta 0:00:01\r\u001b[K     |████████▍                       | 81kB 4.5MB/s eta 0:00:01\r\u001b[K     |█████████▍                      | 92kB 4.9MB/s eta 0:00:01\r\u001b[K     |██████████▌                     | 102kB 4.8MB/s eta 0:00:01\r\u001b[K     |███████████▌                    | 112kB 4.8MB/s eta 0:00:01\r\u001b[K     |████████████▋                   | 122kB 4.8MB/s eta 0:00:01\r\u001b[K     |█████████████▋                  | 133kB 4.8MB/s eta 0:00:01\r\u001b[K     |██████████████▊                 | 143kB 4.8MB/s eta 0:00:01\r\u001b[K     |███████████████▊                | 153kB 4.8MB/s eta 0:00:01\r\u001b[K     |████████████████▊               | 163kB 4.8MB/s eta 0:00:01\r\u001b[K     |█████████████████▉              | 174kB 4.8MB/s eta 0:00:01\r\u001b[K     |██████████████████▉             | 184kB 4.8MB/s eta 0:00:01\r\u001b[K     |████████████████████            | 194kB 4.8MB/s eta 0:00:01\r\u001b[K     |█████████████████████           | 204kB 4.8MB/s eta 0:00:01\r\u001b[K     |██████████████████████          | 215kB 4.8MB/s eta 0:00:01\r\u001b[K     |███████████████████████         | 225kB 4.8MB/s eta 0:00:01\r\u001b[K     |████████████████████████▏       | 235kB 4.8MB/s eta 0:00:01\r\u001b[K     |█████████████████████████▏      | 245kB 4.8MB/s eta 0:00:01\r\u001b[K     |██████████████████████████▏     | 256kB 4.8MB/s eta 0:00:01\r\u001b[K     |███████████████████████████▎    | 266kB 4.8MB/s eta 0:00:01\r\u001b[K     |████████████████████████████▎   | 276kB 4.8MB/s eta 0:00:01\r\u001b[K     |█████████████████████████████▍  | 286kB 4.8MB/s eta 0:00:01\r\u001b[K     |██████████████████████████████▍ | 296kB 4.8MB/s eta 0:00:01\r\u001b[K     |███████████████████████████████▌| 307kB 4.8MB/s eta 0:00:01\r\u001b[K     |████████████████████████████████| 317kB 4.8MB/s \n",
+            "\u001b[?25hRequirement already satisfied: pyyaml in /usr/local/lib/python3.6/dist-packages (from keras==2.2.4) (3.13)\n",
+            "Requirement already satisfied: scipy>=0.14 in /usr/local/lib/python3.6/dist-packages (from keras==2.2.4) (1.4.1)\n",
+            "Requirement already satisfied: h5py in /usr/local/lib/python3.6/dist-packages (from keras==2.2.4) (2.10.0)\n",
+            "Requirement already satisfied: keras-preprocessing>=1.0.5 in /usr/local/lib/python3.6/dist-packages (from keras==2.2.4) (1.1.2)\n",
+            "Requirement already satisfied: six>=1.9.0 in /usr/local/lib/python3.6/dist-packages (from keras==2.2.4) (1.12.0)\n",
+            "Requirement already satisfied: keras-applications>=1.0.6 in /usr/local/lib/python3.6/dist-packages (from keras==2.2.4) (1.0.8)\n",
+            "Requirement already satisfied: numpy>=1.9.1 in /usr/local/lib/python3.6/dist-packages (from keras==2.2.4) (1.18.4)\n",
+            "Installing collected packages: keras\n",
+            "Successfully installed keras-2.2.4\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "application/vnd.colab-display-data+json": {
+              "pip_warning": {
+                "packages": [
+                  "keras"
+                ]
+              }
+            }
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "WOZijk160wKc",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 118
+        },
+        "outputId": "cdcf19d1-39c7-4e6a-dc8a-f0c25eeb4fe6"
+      },
+      "source": [
+        "!pip uninstall keras\n",
+        "\n"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Uninstalling Keras-2.1.5:\n",
+            "  Would remove:\n",
+            "    /usr/local/lib/python3.6/dist-packages/Keras-2.1.5.dist-info/*\n",
+            "    /usr/local/lib/python3.6/dist-packages/keras/*\n",
+            "Proceed (y/n)? y\n",
+            "  Successfully uninstalled Keras-2.1.5\n"
+          ],
+          "name": "stdout"
         }
       ]
     }
