--- a/Pest_CNN.ipynb
+++ b/Pest_CNN.ipynb
@@ -6,7 +6,7 @@
       "name": "Pest_CNN.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMomEy5dPXMwLQ0BLaC8akh",
+      "authorship_tag": "ABX9TyNCbQIo+WxiWYwHazk8TrCh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -230,7 +230,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 185
         },
-        "outputId": "02ca31c5-6274-4927-b36e-389d3a890eda"
+        "outputId": "e2b609cb-50a8-436c-a388-f0582f335f54"
       },
       "source": [
         "file_list = drive.ListFile(\n",
@@ -243,7 +243,7 @@
         "    f_ = drive.CreateFile({'id': f['id']})\n",
         "    f_.GetContentFile(fname)"
       ],
-      "execution_count": 9,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -262,6 +262,19 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "v5CiU0vPL5CE",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -311,6 +324,20 @@
       },
       "source": [
         "!unzip GREENPATROL_DB_V1.0.zip -d '/Pests'\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jAru1vs5L53C",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "class_object = {0 : 'background' , 1 : 'egg_wf' ,\n",
+        "                2 : 'egg_bt', 3 : 'egg_ta', 4 : 'wf', 5 : 'bt', 6 : 'ta', 7 : 'ta_maps', 8 : 'ta_larvae', 9 : 'ta_maps+larvae', 10 : 'tomato'}"
       ],
       "execution_count": 0,
       "outputs": []
